logs/uam.log
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.9.6.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-3.1.0.dist-info'...
Listing './lib/python3.5/site-packages/crayons-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpty'...
Listing './lib/python3.5/site-packages/dockerpty-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/semantic_version'...
Listing './lib/python3.5/site-packages/semantic_version-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/uam'...
Listing './lib/python3.5/site-packages/uam/adapters'...
Listing './lib/python3.5/site-packages/uam/adapters/database'...
Compiling './lib/python3.5/site-packages/uam/adapters/database/gateway.py'...
***   File "./lib/python3.5/site-packages/uam/adapters/database/gateway.py", line 46
    msg = f"tap named {alias} already existed."
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/adapters/docker'...
Compiling './lib/python3.5/site-packages/uam/adapters/docker/gateway.py'...
***   File "./lib/python3.5/site-packages/uam/adapters/docker/gateway.py", line 18
    logger.info(f'creating docker network {network_name} ...')
                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/entities'...
Compiling './lib/python3.5/site-packages/uam/entities/app.py'...
***   File "./lib/python3.5/site-packages/uam/entities/app.py", line 39
    logger.error(f"can not recognize {app_name}'s tap.")
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/entities/exceptions'...
Compiling './lib/python3.5/site-packages/uam/entities/system.py'...
***   File "./lib/python3.5/site-packages/uam/entities/system.py", line 7
    return f'git@github.com:{address}.git'
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/entities/tap.py'...
***   File "./lib/python3.5/site-packages/uam/entities/tap.py", line 15
    return f'git@github.com:{address}.git'
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/interfaces'...
Listing './lib/python3.5/site-packages/uam/interfaces/cli'...
Compiling './lib/python3.5/site-packages/uam/interfaces/cli/app.py'...
***   File "./lib/python3.5/site-packages/uam/interfaces/cli/app.py", line 39
    helper.echo_success(f"{app['name']} installed.")
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/interfaces/cli/helper.py'...
***   File "./lib/python3.5/site-packages/uam/interfaces/cli/helper.py", line 56
    click.echo(f'😟  {error}')
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/interfaces/cli/tap.py'...
***   File "./lib/python3.5/site-packages/uam/interfaces/cli/tap.py", line 23
    click.echo(f"adding tap {alias} using address {address} ...")
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/settings.py'...
***   File "./lib/python3.5/site-packages/uam/settings.py", line 124
    return f'  {prefix}   {message}'
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/usecases'...
Compiling './lib/python3.5/site-packages/uam/usecases/app.py'...
***   File "./lib/python3.5/site-packages/uam/usecases/app.py", line 29
    logger.error(f"can not recognize {app_name}'s format.'")
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam/usecases/exceptions'...
Compiling './lib/python3.5/site-packages/uam/usecases/exceptions/app.py'...
***   File "./lib/python3.5/site-packages/uam/usecases/exceptions/app.py", line 93
    display_name = f"{app_name}📌 {pinned_version}"
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/usecases/system.py'...
***   File "./lib/python3.5/site-packages/uam/usecases/system.py", line 21
    logger.info(f"checking {t['alias']}")
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uam/usecases/tap.py'...
***   File "./lib/python3.5/site-packages/uam/usecases/tap.py", line 34
    logger.info(f"cloning repo {address} ...")
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uam-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
